- 0.10.2

    Bug fixed: Fix to make it work in Zope 2.11 with content_types
    being deprecated. Real#0759, Thanks Pat Heffernan.
    
    Bug fixed: Javascript shortcuts not working when writing a
    non-quick followup (e.g. completing an issue)
    
    Bug fixed: Email address allowed non-ascii characters.
    
    Bug fixed: Javascript keyboard shortcuts not loaded correctly on
    adding issue.

- 0.10.1

    Bug fixed: Sometimes it was not possible to complete a followup
    draft since the action was incorrectly set to "Add Followup" not
    "AddFollowup".
    
    New feature: Much performance improved home page now since
    CountStatuses() now uses the catalog instead. Must press Update
    Everything button.
    
    New feature: Only the firstname is show in the menu when logged in.
    
    New feature: Upgraded to the latest jQuery 1.2.6 and removed
    jquery-latest.pack.js

    Bug fixed: Reloading Add Issue form with multiple select custom
    fields selected would cause a TypeError. Thanks Nicolas.

    Bug fixed: IssueTracker User Folder allowed to save non-unicode
    full names.
    
    Bug fixed: Uncataloging saved filters before the saved filters
    catalog had been set up could cause an AttributeError.
    
    Bug fixed: Custom fields in filters where nothing is an option
    could cause the filter to filter out all issues. 

    Bug fixed: Filtering on custom fields that are lines or ulines
    would give a ugly filtername that looks like a repr of a python
    list or tuple.

    Bug fixed: Custom field selects with forced values overrides the
    list of options.

    Bug fixed: Fixed a bug where some saved followup drafts weren't
    saved as Unicode.
    
    Bug fixed: Custom field type validity check failed on values that
    were already lists or tuples and don't need to be converted to a
    list.
    
    Bug fixed: Custom fields that were "ulines" or "lines" and 