@@ -1,3 +1,9 @@
+-
+
+    Bug fixed: Always notify could accidentally send emails to people
+    not necessarily in the always notify list but with the same first
+    name of the full name.
+    
 - 0.10.2
 
     Bug fixed: Fix to make it work in Zope 2.11 with content_types
